fix z-index on top menu and publication title; add missing bootstrap.js file

--- a/aircox_cms/static/aircox_cms/css/layout.css
+++ b/aircox_cms/static/aircox_cms/css/layout.css
@@ -85,6 +85,7 @@ ul {
 
 body > .top {
     position: fixed;
+    z-index: 10000000;
     top: 0;
     left: 0;
     width: calc(100% - 0.8em);
