--- a/aircox_cms/static/aircox_cms/css/theme.css
+++ b/aircox_cms/static/aircox_cms/css/theme.css
@@ -109,6 +109,7 @@ main.detail {
 
     main.detail > header h1.title {
         position: relative;
+        z-index: 1000;
         padding: 0.4em;
         margin: 0em;
         margin-bottom: -2em;
